fix: smooth scroll time scale and reduce repaint flicker (#3)

--- a/src/marquee-content.css
+++ b/src/marquee-content.css
@@ -29,6 +29,8 @@
   display: flex;
   width: max-content;
   transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   will-change: transform;
 }
 
